--- a/packages/coinstac-client-core/package.json
+++ b/packages/coinstac-client-core/package.json
@@ -36,6 +36,7 @@
     "lodash": "^4.17.10",
     "mkdirp": "^0.5.1",
     "os-homedir": "^1.0.2",
-    "winston": "^2.4.2"
+    "winston": "^2.4.2",
+    "convict": "^4.4.0"
   }
 }
