--- a/packages/coinstac-ui/package.json
+++ b/packages/coinstac-ui/package.json
@@ -104,13 +104,14 @@
     "url-loader": "^1.1.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
     "build:webpack": "cross-env NODE_ENV=production webpack --mode=production",
     "build-dev": "node ./scripts/build-setup.js && npm i && node ./scripts/post-install.js && npm run build:webpack && node ./scripts/build.js",
     "build": "npm i && npm run build:webpack && node ./scripts/build.js",
     "start": "webpack --mode=development && cross-env STEELPENNY_URL='https://coins-api.mrn.org/api/v1.3.0' electron . --log-level=debug",
+    "debug": "webpack --mode=development && cross-env STEELPENNY_URL='https://coins-api.mrn.org/api/v1.3.0' electron . --inspect=192.168.1.148:5858 --log-level=debug",
     "build-native": "node ./scripts/build-native.js",
     "clean": "node scripts/clean.js",
     "clean:db": "node scripts/clean-db.js",
